fine tuning design

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <div class="files">
         <div class="file">
-          <div class="file-icon pdf"><i class="fa fa-file-pdf-o"></i></div>
+          <div class="file-icon pdf"><i class="fas fa-file-pdf"></i></div>
           <div class="file-info">
             <div class="file-name">Sample File.pdf</div>
             <div class="file-size-date">2.38 MB - Modified Mar 8, 2020</div>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="file">
-          <div class="file-icon code"><i class="fa fa-file-code-o"></i></div>
+          <div class="file-icon code"><i class="fas fa-file-code"></i></div>
           <div class="file-info">
             <div class="file-name">Hire_Me.js</div>
             <div class="file-size-date">1.35 KB - Modified Jun 28, 2020</div>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="file">
-          <div class="file-icon img"><i class="fa fa-file-image-o"></i></div>
+          <div class="file-icon img"><i class="fas fa-file-image"></i></div>
           <div class="file-info">
             <div class="file-name">Account Configuration.png</div>
             <div class="file-size-date">784 KB - Modified Feb 1, 2020</div>
@@ -105,7 +105,7 @@
         </div>
 
         <div class="file">
-          <div class="file-icon zip"><i class="fa fa-file-zip-o"></i></div>
+          <div class="file-icon zip"><i class="fas fa-file-archive"></i></div>
           <div class="file-info">
             <div class="file-name">Check_Hardware.zip</div>
             <div class="file-size-date">364 MB - Modified Apr 17, 2020</div>
@@ -117,9 +117,9 @@
 
     <div class="menu">
       <div><i class="fas fa-folder"></i></div>
-      <div><i class="fa fa-wrench"></i></div>
+      <div><i class="fas fa-tools"></i></div>
       <div class="cta"><i class="fas fa-plus"></i></div>
-      <div><i class="fa fa-cogs"></i></div>
+      <div><i class="fas fa-cogs"></i></div>
       <div><i class="fas fa-user"></i></div>
     </div>
   </body>
